split the upper AFE chest into 2 locations now that I know there's 2 chests there

--- a/worlds/nine_sols/shared_static_logic/locations.jsonc
+++ b/worlds/nine_sols/shared_static_logic/locations.jsonc
@@ -19,7 +19,11 @@
 
     // Apeman Facility (Elevator)
     {
-        "address": 201, "name": "AF (Elevator): Atop Upper Level Pagoda",
+        "address": 201, "name": "AF (Elevator): Hidden Atop Upper Level Pagoda (Left Chest)",
+        "region": "AFE - Between Root Nodes", "requires": []
+    },
+    {
+        "address": 207, "name": "AF (Elevator): Hidden Atop Upper Level Pagoda (Right Chest)",
         "region": "AFE - Between Root Nodes", "requires": []
     },
     {
