decided to do 3 items for the arrow types, and no item for the bow itself

--- a/worlds/nine_sols/shared_static_logic/items.jsonc
+++ b/worlds/nine_sols/shared_static_logic/items.jsonc
@@ -15,15 +15,18 @@
     { "code": 14, "name": "Unbounded Counter", "type": "progression" },
     { "code": 15, "name": "Cloud Leap", "type": "progression" },
     { "code": 16, "name": "Super Mutant Buster", "type": "progression" },
-    { "code": 17, "name": "Azure Bow", "type": "useful" },
 
-    { "code": 21, "name": "Herb Catalyst", "type": "useful" },
-    { "code": 22, "name": "Pipe Vial", "type": "useful" },
-    { "code": 23, "name": "Tao Fruit", "type": "useful" },
-    { "code": 24, "name": "Greater Tao Fruit", "type": "useful" },
-    { "code": 25, "name": "Twin Tao Fruit", "type": "useful" },
-    { "code": 26, "name": "Computing Unit", "type": "useful" },
-    { "code": 27, "name": "Dark Steel", "type": "useful" },
+    { "code": 21, "name": "Arrow: Cloud Piercer", "type": "useful" },
+    { "code": 22, "name": "Arrow: Thunder Buster", "type": "useful" },
+    { "code": 23, "name": "Arrow: Shadow Hunter", "type": "useful" },
+
+    { "code": 31, "name": "Herb Catalyst", "type": "useful" },
+    { "code": 32, "name": "Pipe Vial", "type": "useful" },
+    { "code": 33, "name": "Tao Fruit", "type": "useful" },
+    { "code": 34, "name": "Greater Tao Fruit", "type": "useful" },
+    { "code": 35, "name": "Twin Tao Fruit", "type": "useful" },
+    { "code": 36, "name": "Computing Unit", "type": "useful" },
+    { "code": 37, "name": "Dark Steel", "type": "useful" },
 
     { "code": 101, "name": "Abandoned Mines Access Token", "type": "progression" },
     { "code": 102, "name": "Legend of the Porky Heroes", "type": "progression" },
