--- a/worlds/nine_sols/shared_static_logic/items.jsonc
+++ b/worlds/nine_sols/shared_static_logic/items.jsonc
@@ -20,55 +20,66 @@
     { "code": 22, "name": "Arrow: Thunder Buster", "type": "useful" },
     { "code": 23, "name": "Arrow: Shadow Hunter", "type": "useful" },
 
+    // "Material"s
     { "code": 31, "name": "Herb Catalyst", "type": "useful" },
-    { "code": 32, "name": "Pipe Vial", "type": "useful" },
-    { "code": 33, "name": "Tao Fruit", "type": "useful" },
-    { "code": 34, "name": "Greater Tao Fruit", "type": "useful" },
-    { "code": 35, "name": "Twin Tao Fruit", "type": "useful" },
-    { "code": 36, "name": "Computing Unit", "type": "useful" },
-    { "code": 37, "name": "Dark Steel", "type": "useful" },
+    { "code": 32, "name": "Dark Steel", "type": "useful" },
 
-    { "code": 101, "name": "Abandoned Mines Access Token", "type": "progression" },
-    { "code": 102, "name": "Legend of the Porky Heroes", "type": "progression" },
-    { "code": 103, "name": "Ji's Hair", "type": "progression" },
-    { "code": 104, "name": "Tianhuo Serum", "type": "progression" },
-    { "code": 105, "name": "Elevator Access Token", "type": "progression" },
-    { "code": 106, "name": "Rhizomatic Bomb", "type": "useful" },
-    { "code": 107, "name": "Homing Darts", "type": "progression" },
-    { "code": 108, "name": "Thunderburst Bomb", "type": "progression" },
+    // "Equipment"
+    { "code": 41, "name": "Pipe Vial", "type": "useful" },
+    { "code": 42, "name": "Computing Unit", "type": "useful" },
 
-    { "code": 109, "name": "Fusang Amulet", "type": "useful" },
-    { "code": 110, "name": "Multi-tool Kit", "type": "useful" },
-    { "code": 111, "name": "Ancient Sheet Music", "type": "progression" },
-    { "code": 112, "name": "Unknown Seed", "type": "progression" },
-    { "code": 113, "name": "GM Fertilizer", "type": "progression" },
-    { "code": 114, "name": "Sword of Jie", "type": "useful" },
-    { "code": 115, "name": "Antique Vinyl Record", "type": "useful" },
-    { "code": 116, "name": "Qiankun Board", "type": "useful" },
-    { "code": 117, "name": "Red Guifang Clay", "type": "useful" },
-    { "code": 118, "name": "Penglai Recipe Collection", "type": "useful" },
-    { "code": 119, "name": "Tiandao Academy Periodical", "type": "useful" },
-    { "code": 120, "name": "Kunlun Immortal Portrait", "type": "progression" },
-    { "code": 121, "name": "Virtual Reality Device", "type": "useful" },
-    { "code": 122, "name": "Ready-to-Eat Rations", "type": "useful" },
-    { "code": 123, "name": "The Four Treasures of the Study", "type": "progression" },
+    // "Key Item"s that are really just upgrades
+    { "code": 51, "name": "Tao Fruit", "type": "useful" },
+    { "code": 52, "name": "Greater Tao Fruit", "type": "useful" },
+    { "code": 53, "name": "Twin Tao Fruit", "type": "useful" },
 
-    { "code": 124, "name": "Bloody Crimson Hibiscus", "type": "filler" },
-    { "code": 125, "name": "Ancient Penglai Ballad", "type": "progression" },
-    { "code": 126, "name": "Portrait of Yi", "type": "progression" },
-    { "code": 127, "name": "Poem Hidden in the Immortal's Portrait", "type": "filler" },
-    { "code": 128, "name": "Soul-Severing Blade", "type": "useful" },
-    { "code": 129, "name": "Firestorm Ring", "type": "useful" },
+    // progression "Artifact"s gifted to Shuanshuan
+    { "code": 101, "name": "(Artifact) Ancient Sheet Music", "type": "progression" },
+    { "code": 102, "name": "(Artifact) Kunlun Immortal Portrait", "type": "progression" },
+    { "code": 103, "name": "(Artifact) The Four Treasures of the Study", "type": "progression" },
+    { "code": 104, "name": "(Artifact) Unknown Seed", "type": "progression" },
+    { "code": 105, "name": "(Artifact) GM Fertilizer", "type": "progression" },
 
-    { "code": 130, "name": "Noble Ring", "type": "useful" },
-    { "code": 131, "name": "Passenger Token: Zouyan", "type": "filler" },
-    { "code": 132, "name": "Passenger Token: A-Shou", "type": "filler" },
-    { "code": 133, "name": "Passenger Token: Xipu", "type": "filler" },
-    { "code": 134, "name": "Passenger Token: Yangfan", "type": "filler" },
-    { "code": 135, "name": "Passenger Token: Jihai", "type": "filler" },
-    { "code": 136, "name": "Passenger Token: Aimu", "type": "filler" },
-    { "code": 137, "name": "Passenger Token: Shiyangyue", "type": "filler" },
-    { "code": 138, "name": "Gene Eradicator", "type": "useful" },
+    // progression "Artifact"s created by Shuanshuan
+    { "code": 111, "name": "(Artifact) Portrait of Yi", "type": "progression" },
+    { "code": 112, "name": "(Artifact) Legend of the Porky Heroes", "type": "progression" },
+
+    // other "Artifact"s gifted to Shuanshuan
+    { "code": 121, "name": "(Artifact) Fusang Amulet", "type": "useful" },
+    { "code": 122, "name": "(Artifact) Multi-tool Kit", "type": "useful" },
+    { "code": 123, "name": "(Artifact) Sword of Jie", "type": "useful" },
+    { "code": 124, "name": "(Artifact) Antique Vinyl Record", "type": "useful" },
+    { "code": 125, "name": "(Artifact) Qiankun Board", "type": "useful" },
+    { "code": 126, "name": "(Artifact) Red Guifang Clay", "type": "useful" },
+    { "code": 127, "name": "(Artifact) Penglai Recipe Collection", "type": "useful" },
+    { "code": 128, "name": "(Artifact) Tiandao Academy Periodical", "type": "useful" },
+    { "code": 129, "name": "(Artifact) Virtual Reality Device", "type": "useful" },
+    { "code": 130, "name": "(Artifact) Ready-to-Eat Rations", "type": "useful" },
+
+    // other "Key Item"s, roughly in order of (randomizer) importance
+    { "code": 141, "name": "Abandoned Mines Access Token", "type": "progression" },
+    { "code": 142, "name": "Elevator Access Token", "type": "progression" },
+    { "code": 143, "name": "Homing Darts", "type": "progression" },
+    { "code": 144, "name": "Thunderburst Bomb", "type": "progression" },
+    { "code": 145, "name": "Ancient Penglai Ballad", "type": "progression" },
+    { "code": 146, "name": "Ji's Hair", "type": "progression" },
+    { "code": 147, "name": "Tianhuo Serum", "type": "progression" },
+    { "code": 148, "name": "Rhizomatic Bomb", "type": "useful" },
+    { "code": 149, "name": "Soul-Severing Blade", "type": "useful" },
+    { "code": 150, "name": "Firestorm Ring", "type": "useful" },
+    { "code": 151, "name": "Poem Hidden in the Immortal's Portrait", "type": "filler" },
+    { "code": 152, "name": "Bloody Crimson Hibiscus", "type": "filler" },
+
+    // unique recyclables (including Gene Eradicator since that's its best use)
+    { "code": 161, "name": "(Recyclable) Noble Ring", "type": "useful" },
+    { "code": 162, "name": "(Recyclable) Passenger Token: Zouyan", "type": "filler" },
+    { "code": 163, "name": "(Recyclable) Passenger Token: A-Shou", "type": "filler" },
+    { "code": 164, "name": "(Recyclable) Passenger Token: Xipu", "type": "filler" },
+    { "code": 165, "name": "(Recyclable) Passenger Token: Yangfan", "type": "filler" },
+    { "code": 166, "name": "(Recyclable) Passenger Token: Jihai", "type": "filler" },
+    { "code": 167, "name": "(Recyclable) Passenger Token: Aimu", "type": "filler" },
+    { "code": 168, "name": "(Recyclable) Passenger Token: Shiyangyue", "type": "filler" },
+    { "code": 169, "name": "Gene Eradicator", "type": "useful" },
 
     { "code": 201, "name": "Central Core Chip", "type": "useful" },
     { "code": 202, "name": "Power Reservoir Chip", "type": "useful" },
@@ -158,9 +169,9 @@
     { "code": 601, "name": "Jin x800", "type": "filler" },
     { "code": 602, "name": "Jin x320", "type": "filler" },
     { "code": 603, "name": "Jin x50", "type": "filler" },
-    { "code": 604, "name": "Basic Component", "type": "filler" },
-    { "code": 605, "name": "Standard Component", "type": "filler" },
-    { "code": 606, "name": "Advanced Component", "type": "filler" },
+    { "code": 604, "name": "(Recyclable) Basic Component", "type": "filler" },
+    { "code": 605, "name": "(Recyclable) Standard Component", "type": "filler" },
+    { "code": 606, "name": "(Recyclable) Advanced Component", "type": "filler" },
 
     { "code": null, "name": "Victory - Eggnog", "type": "progression" },
     { "code": null, "name": "Event - Kuafu in FSP", "type": "progression" },
