add a missing jin-only chest in EDP

--- a/worlds/nine_sols/shared_static_logic/locations.jsonc
+++ b/worlds/nine_sols/shared_static_logic/locations.jsonc
@@ -1330,6 +1330,10 @@
             // AND slide/grapple AND WC
         ]
     },
+    {
+        "address": 3512, "name": "ED (Passages): Above Upper Hallway Turret",
+        "region": "EDP - Upper Elevator", "requires": [ { "item": "Unbounded Counter" } ]
+    },
 
     // Empyrean Dist. (Living Area)
     {
