change CC flower location name since it technically isn't Lady E's flower

--- a/worlds/nine_sols/shared_static_logic/locations.jsonc
+++ b/worlds/nine_sols/shared_static_logic/locations.jsonc
@@ -251,7 +251,7 @@
         "region": "CC - Root Node After Boss", "requires": []
     },
     {
-        "address": 602, "name": "Cortex Center: Lady Ethereal's Tianhuo Flower",
+        "address": 602, "name": "Cortex Center: Tianhuo Flower After Soulscape",
         "region": "CC - Root Node After Boss", "requires": []
     },
     {
